# Gross-to-Net-Converter

./: .dockerignore  .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  file_hierachy  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
api/: __init__.py  main.py  wait_for_db.py
api/routers/: gross_net.py  saved_calculations_router.py
core/: __init__.py  calculator.py  constants.py  crud_saved_calculations.py  database.py  exceptions.py  models.py
database/: postgresql.conf
docker/: api.Dockerfile  db.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: app.py
tests/: test_calculator.py
tests/data/: data_test_gross_net.csv  data_test_gross_net.xlsx
