# Specifies the build system (setuptools in this case)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Defines project metadata and dependencies (PEP 621)
[project]
name = "vn_gross_net_calculator"
version = "0.1.2" # Bump version for changes
description = "A calculator for Vietnamese Gross to Net income (Apr 2025), with Streamlit UI and FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "streamlit >= 1.20.0",
    "fastapi >= 0.90.0",
    "uvicorn[standard] >= 0.20.0",
    "pydantic >= 2.0.0",
    "pandas >= 1.5.0",
    "openpyxl >= 3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "requests >= 2.20.0",
    "pandas >= 1.5.0",
    "openpyxl >= 3.0.0",
]
dev = [
    "ruff",
]

# --- Build tool specific configurations ---
[tool.setuptools]
packages = ["core", "api", "frontend"]

# --- Optional: Tool configurations ---
[tool.ruff]
line-length = 88 # Keep your desired line length

[tool.ruff.lint]
# Select the rules you generally want Ruff to check for.
# 'F' (Pyflakes), 'E'/'W' (pycodestyle), 'I' (isort), 'B' (flake8-bugbear) are common.
select = ["E", "W", "F", "I", "UP", "B"]

# Ignore specific rules GLOBALLY across the entire project.
# Add all the codes reported in your GitHub Actions failure log here.
ignore = [
    "E501",  # Line too long
    "W292",  # No newline at end of file
    "I001",  # Import block is un-sorted or un-formatted
    "F401",  # Imported but unused
    "F541",  # f-string without any placeholders
    "B008",  # Do not perform function call in argument defaults
    "B904",  # Raise from within except
]

# Remove or keep commented out the per-file-ignores if using global ignore
# [tool.ruff.lint.per-file-ignores]
# "api/main.py" = ["F401", "F541"]
# "core/models.py" = ["F401"]
# "core/calculator.py" = ["F401"]
# "frontend/app.py" = ["F401"]
# "tests/test_calculator.py" = ["F401"]

# [tool.ruff.format]
# quote-style = "double"




